style: Alineación, Fuente, Fondo de Tag Body

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 
 <head>
+  <link rel="stylesheet" href="style.css">
   <title>CH54</title>
 </head>
 
 <body>
-  <h1>Hola Yorch Dutton</h1>
+  <h1>Hola Jorge Aragón (Yorch)</h1>
 </body>
 
 </html>
