--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
   <h1>Hola Jorge Aragón (Yorch)</h1>
   <h2>Me gusta el Garibaldi del Globo</h2>
+  <p>Me gusta por el sabor a Naranja y los chochitos de azucar</p>
+  <p>Acabo de descubrir que el Champurrado lo hacen diferente en diferentes partes de MX</p>
 </body>
 
 </html>
