--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <h1>Hola Jorge Aragón (Yorch)</h1>
   <h2>Me gusta el Garibaldi del Globo</h2>
+  <button>Cambia la canción</button>
 </body>
 
 </html>
