--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <button>Cambia el nombre</button>
   <button>Cambia la canción</button>
 
-  <div>Esto es una división</div>
+  <div></div>
   <p>Despues de la División creada estamos creando un nuevo párrafo</p>
   <p>Mas adelante vamos a mover el botón de canción mas abajo.</p>
   <h2>Canciones Favoritas</h2>
